# Pixgine

./: Cargo.toml  README.md
.poolside/: settings.local.yaml
editor/: Cargo.toml
editor/.poolside/: settings.local.yaml
editor/src/: main.rs  panels.rs  viewport.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/assets/: handle.rs  import.rs  manager.rs  mod.rs  watcher.rs
engine/src/audio/: manager.rs  mod.rs
engine/src/core/: config.rs  engine.rs  mod.rs  resolution.rs
engine/src/ecs/: components.rs  mod.rs  resources.rs  systems.rs
engine/src/input/: manager.rs  mod.rs
engine/src/physics/: mod.rs  physics_world.rs
engine/src/renderer/: camera.rs  context.rs  mod.rs  pipeline.rs  sprite_batch.rs  texture.rs
engine/src/renderer/shaders/: sprite.wgsl  upscale.wgsl
engine/src/scene/: mod.rs  scene.rs  serializer.rs
engine/src/scripting/: engine_api.rs  mod.rs  script_engine.rs
game/: Cargo.toml
game/src/: main.rs
