[package]
name = "pixgine-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pixgine-engine = { path = "../engine" }
bevy_ecs = "0.15"
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = { version = "0.31", features = ["winit"] }
winit = "0.30"
wgpu = "24.0"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
serde_json = "1"
anyhow = "1"
log = "0.4"
rfd = "0.15"
rapier2d = "0.21"
env_logger = "0.11"
walkdir = "2"
