[package]
name = "pixgine-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pixgine_engine"

[dependencies]
# Window management
winit = "0.30"

# Rendering
wgpu = "24.0"
wgpu-types = "24.0"

# ECS
bevy_ecs = "0.15"

# Physics
rapier2d = "0.21"

# Scripting
mlua = { version = "0.10", features = ["lua54", "send"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Image loading
image = "0.25"

# Audio
rodio = "0.20"

# Logging
log = "0.4"
env_logger = "0.11"

# Math
glam = { version = "0.29", features = ["serde"] }

# UUID for asset handles
uuid = { version = "1", features = ["v4", "serde"] }

# File watching for hot reload
notify = "7"

# Random number generation for particles
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# bytemuck for safe cast
bytemuck = { version = "1", features = ["derive"] }

# Anyhow for error handling
anyhow = "1"
thiserror = "2"
